--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
         <section class="content-container">
             <h1>Wide coverage location</h1>
 
-            <p>Shared rides, Theres lots to do in your city, and weve got the rides to help you enjoy it all. And theyre all available right from your app.</p>
+            <p>Shared rides. Theres lots to do in your city, and weve got the rides to help you enjoy it all. And theyre all available right from your app.</p>
             
 
             <button>Learn more</button>
