--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;0,900;1,400&family=Open+Sans:ital@1&family=Oswald&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <title> Wide Coverage alteraçao no title</title>
+    <title> Wide Coverage - branch develop</title>
 </head>
 <body>
     
